# ultreon-app-center

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
.run/: Tauri Build.run.xml
src/: main.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: app.rs  archive.rs  launch.rs  main.rs  net.rs  profiles.rs  sdk.rs  util.rs
src/apps/: ProjectInfo.tsx  ProjectList.css  ProjectList.tsx
src/components/: ProjectInfo.tsx  SideBar.css  SideBar.tsx  TitleBar.tsx
src/routes/apps/: AppsPage.css  AppsPage.tsx
src/routes/home/: HomePage.css  HomePage.tsx
src/routes/instances/: InstancesPage.tsx
src/routes/project/: ProjectPage.css  ProjectPage.tsx
src/util/: Profiles.tsx  Sdk.tsx
